# toll-calculator

./: .gitignore  .gitmodules  Evolve.sln  README.md  SuggestionsToImprove  TODO.md  Toll-Calculator.sln  TollCalculator.cs  TollCalculator.sln  TollCalculatorTests.cs  TollFeeCalculator.sln  app.py  dates.js  index.php  note.md  package-lock.json  package.json  pom.xml  requirements.in  requirements.txt  setup.cfg  tollAmount.js  tollCalculator.js  toll_fee.yaml  vehicle.js
AbbasAmiriSolution/: .gitignore  AbbasAmiriSolution.sln  ReadMe.md
Amir_Python/: test_toll_calculator.py  toll_calculator.py  toll_constants.py  vehicle.py
C#/: .dockerignore  .gitignore  Car.cs  Configuration.json  Evolve.sln  IVehicle.cs  Motorbike.cs  MySolution.sln  Program.cs  README.md  TestSuite.cs  Toll.Calculator.sln  TollCalculationApp.sln  TollCalculator.cs  TollCalculator.csproj  TollCalculator.sln  TollCalculatorTests.cs  TollFeeCalculator.csproj  TollFeeCalculator.sln  TollFeeCalculator.sln.DotSettings  TollFeePeriod.cs  TollFree.cs  Vehicle.cs  build.bat  dockerfile  packages.config  toll-calculator.sln
C++/: CMakeLists.txt
C++/include/toll_fee_calculator/: date_time.h  toll_fee_calculator.h  vehicle.h
C++/include/toll_fee_calculator/detail/: get_daily_fee.h  get_hourly_fee.h  get_time_of_day_fee.h  is_toll_free_date.h  time_of_day_range.h
C++/src/: date_time.cpp  toll_fee_calculator.cpp  vehicle.cpp
C++/src/detail/: get_daily_fee.cpp  get_hourly_fee.cpp  get_time_of_day_fee.cpp  is_toll_free_date.cpp  time_of_day_range.cpp
C++/tests/: CMakeLists.txt  easter_date.cpp  get_daily_fee.cpp  get_hourly_fee.cpp  get_time_of_day_fee.cpp  is_toll_free_date.cpp  toll_fee_calculator.cpp
DateLibrary/: DateLibrary.csproj  Extensions.cs  HolidayProvider.cs
Elixir/: .gitignore  Dockerfile  Makefile  README.md  mix.exs
Evolve.Services/: Evolve.Services.sln
Go/: go.mod  holiday-calculator.go  holiday-calculator_test.go  intervals.go  intervals_test.go  main.go  main_test.go  vehicle.go  vehicle_test.go
Golang/: README.md  go.mod  toll_calculator.go  toll_calculator_test.go  toll_fee_by_date.go  toll_fee_by_date_test.go  toll_fee_date_checker.go  toll_fee_date_checker_test.go  toll_fee_vehicle_checker.go  toll_fee_vehicle_checker_test.go
JS/: package-lock.json  package.json
Java/: .classpath  .gitignore  Car.java  Constants.java  Diplomat.java  Emergency.java  Foreign.java  Helpers.java  HolidayList.java  Military.java  Motorbike.java  MyCalendar.java  README.md  SwedishHolidays.java  TestTollCalculator.java  TollCalculator.java  TollCalculatorMain.java  TollCalculatorTest.java  pom.xml  (+10 more)
(+1487 files in other folders)
